--- a/store/templates/store/signin.html
+++ b/store/templates/store/signin.html
@@ -5,9 +5,9 @@
 {% else %}
     <div class="logfo">
       <div class="wrapper">
+        <h2>Login</h2>
         <form method="POST" action="{% url 'signin' %}">
           {% csrf_token %}
-          <h2>Login</h2>
           <div class="input-field">
             <input type="text" id="username" name="username" required autofocus>
             <label for="username">Username</label>
@@ -18,7 +18,7 @@
           </div>
           <button type="submit">Login</button>
         <div class="forget">
-          <a href="{% url 'signin'%}">Forgot password?</a>
+          <a href="{% url 'reset_password'%}">Forgot password?</a>
         </div>
         <div class="register"></div>
             <p>Don't have an account? <a href="{% url 'signup'%}">Register</a></p>
