css changed and dropdown issue fixed

--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -1,9 +1,19 @@
 {% extends "store/base.html" %}
 {% block content %}
 
-<div class="container">
-    <h1>About Page</h1>
+<div style="display: flex;
+flex-direction: column;
+margin: 40px;
+padding: 30px 40px;
+border: 1px solid #666;
+border-radius: 6px;
+background-color:#f0f2f5;">
+    <h1>About Us</h1>
+    <p>
+        At <strong>Govindam Gems</strong>, we specialize in the enchanting beauty of aquamarine and amethyst. With a passion for these timeless gemstones, we curate only the finest pieces, celebrated for their serene blues and regal purples.
+    </p>
+    <p>
+        Our commitment to quality, authenticity, and customer satisfaction ensures you'll find a gemstone as unique as you are. Explore our collection and let the elegance of aquamarine and amethyst inspire your journey.
+    </p>
 </div>
-
-
 {% endblock content %}
