--- a/store/templates/store/category.html
+++ b/store/templates/store/category.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container"></div>
-    <h1>{{ category }} Collection</h1>
+    <h1 style="text-align: center;">{{ category }} Collections</h1>
     <br>
     <div class="cards">
         {% for jewel in jewellery %}
