--- a/store/templates/store/add_jewellery.html
+++ b/store/templates/store/add_jewellery.html
@@ -10,7 +10,16 @@
                 <label for="jewel_name">Stone Name</label>
             </div>
             <div class="input-field">
-                <textarea id="jewel_description" name="jewel_description" rows="4" placeholder="Description" required></textarea>
+                <input type="text" id="jewel_size" name="jewel_size">
+                <label for="jewel_size">Size</label>
+            </div>
+            <div class="input-field">
+                <input type="text" id="jewel_weight" name="jewel_weight">
+                <label for="jewel_weight">Weight</label>
+            </div>
+            <div class="input-field">
+                <input type="text" id="jewel_origin" name="jewel_origin">
+                <label for="jewel_origin">Origin</label>
             </div>
             
             <select id="category" name="category"
