--- a/store/templates/store/signin.html
+++ b/store/templates/store/signin.html
@@ -20,8 +20,9 @@
         <div class="forget">
           <a href="{% url 'reset_password'%}">Forgot password?</a>
         </div>
-        <div class="register"></div>
+        <div class="register">
             <p>Don't have an account? <a href="{% url 'signup'%}">Register</a></p>
+        </div>
           </div>
         </form>
       </div>
