--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <div class="container">
-    <h1>Jewellery Collection</h1>
-    <p>Explore our exquisite jewellery pieces crafted with precision and care.</p>
+    <h1>Gemstones Collection</h1>
+    <p>Explore our exquisite Gemstones crafted with precision and care.</p>
     <br>
     <div class="cards">
         {% for jewel in jewellery %}
@@ -13,7 +13,6 @@
                 <img src="{{ jewel.jewel_image.url }}" alt="{{ jewel.jewel_name }}">
                 <div class="card-content">
                     <h3>{{ jewel.jewel_name }}</h3>
-                    <p>{{ jewel.jewel_description }}</p>
                 </div>
             </a>
         </div>
