--- a/store/templates/store/details.html
+++ b/store/templates/store/details.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="detail_container">
-    <div class="cover-image" style="background-image: url('{{jewel.jewel_image.url}}');">
+    <div class="cover-image" style="background-image: url('{{jewel.jewel_image_url}}');">
         <div class="cover-title">{{jewel.jewel_category}}</div>
     </div>
     <div class="det_cont1">
