--- a/store/templates/store/search.html
+++ b/store/templates/store/search.html
@@ -15,7 +15,7 @@
             <!-- Card -->
             <div class="card">
                 <a href="{% url 'details' jewel.id %}">
-                    <img src="{{ jewel.jewel_image.url }}" alt="{{ jewel.jewel_name }}">
+                    <img src="{{ jewel.jewel_image_url }}" alt="{{ jewel.jewel_name }}">
                     <div class="card-content">
                         <h3>{{ jewel.jewel_name }}</h3>
                         <p>{{ jewel.jewel_description }}</p>
