--- a/store/templates/store/details.html
+++ b/store/templates/store/details.html
@@ -9,9 +9,9 @@
         <h2 style="color: black;">{{jewel.jewel_name}}</h2>
         <div>
             <h3>Size:<span>{{jewel.jewel_size}}</span> </h3>
-            <h3>Weight: <span>{{jewel.jewel_weight}} Carat </span></h3>
-            <h3>Origin: <span>{{jewel.jewel_origin}}</span></h3>
-            <h4>Rs.<span>{{jewel.jewel_price}} Per Carat </span></h4>
+            <h3>Weight:<span>{{jewel.jewel_weight}} Carat </span></h3>
+            <h3>Origin:<span>{{jewel.jewel_origin}}</span></h3>
+            <h4>$<span>{{jewel.jewel_price}} Per Carat </span></h4>
         </div>
         <div class="cart">
             <button><i class="fa-solid fa-cart-shopping"></i></button>
