--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -37,7 +37,11 @@
                                 {% endfor %}
                             </div>
                         </li>
-                        <li><a href="{% url 'about' %}">About</a></li>
+                        {% if request.path == '/about/' %}
+                            <li><a href="{% url 'home' %}">Home</a></li>
+                        {% else %}
+                            <li><a href="{% url 'about' %}">About</a></li>
+                        {% endif %}
                     </ul>
                     <form method="GET" action="{% url 'search_view' %}">
                         <div class="search-box">
